--- a/views/recipe.html
+++ b/views/recipe.html
@@ -1,11 +1,120 @@
 <!DOCTYPE html>
 <html lang="en">
+
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <link rel="stylesheet" href="../css/style.css">
     <title>About Me</title>
 </head>
+
 <body>
-    <p>I am paragraph inside recipe folder</p>
+    <div id="wrapper">
+        <p>
+            <header id="mainHeader">Grandma's Lemon Meringue Pie</header>
+        </p>
+
+        <div>
+            <img src="../images/recipe/pie.jpg" alt="">
+        </div>
+
+        <p>One 9-inch pie <br />
+            30 Min - Prep time <br />
+            10 Min - Cook time <br />
+            40 Min - Total <br />
+            8 Servings</p>
+        <hr>
+        <section id="ingredients">
+            <header>INGREDIENTS</header>
+            <ul>
+                <li>1 cup white sugar</li>
+                <li>2 tbsp all-purpose flour</li>
+                <li>3 tbsp cornstarch</li>
+                <li>1/4 tsp salt</li>
+                <li>1 1/2 cups water</li>
+                <li>2 lemons, juiced and zested</li>
+                <li>2 tbsp butter</li>
+                <li>4 egg yolks, beaten</li>
+                <li>1 (9 inch) pie crust, baked</li>
+                <li>4 egg whites</li>
+                <li>6 tbsp white sugar</li>
+            </ul>
+
+        </section>
+        <hr>
+        <section id="directions">
+            <header>DIRECTIONS</header>
+            <ol>
+                <li>Preheat Oven: Preheat oven to 350 degrees F (175 degrees C).</li>
+                <li>Make Lemon Filling: In a medium saucepan ...
+                    <ul>
+                        <li>Whisk together 1 cup sugar, flour, cornstarch, and salt.</li>
+                        <li>Stir in water, lemon juice and lemon zest.</li>
+                        <li>Cook over medium-high heat, stirring frequently, until mixture comes to a boil.</li>
+                        <li>Stir in butter.</li>
+                        <li>Place egg yolks in a small bowl and gradually whisk in 1/2 cup of hot sugar mixture.</li>
+                        <li>Whisk egg yolk mixture back into remaining sugar mixture.</li>
+                        <li>Bring to a boil and continue to cook while stirring constantly until thick.</li>
+                        <li>Remove from heat.</li>
+                        <li>Pour filling into baked pastry shell.</li>
+                    </ul>
+                </li>
+                <li>Make Meringue: In a large glass or metal bowl ...
+                    <ul>
+                        <li>Whip egg whites until foamy.</li>
+                        <li>Add sugar gradually, and continue to whip until stiff peaks form.</li>
+                        <li>Spread meringue over pie, sealing the edges at the crust.
+                    </ul>
+                    </ul>
+                </li>
+                <li>Bake: Bake in preheated oven for 10 minutes, or until meringue is golden brown.</li>
+            </ol>
+            This is our favorite recipe here at Granny's Pies. It has been enjoyed by pie fans for many years. It's
+            Granny's
+            favorite! We hope you'll find that this recipe is delicious and also easy to follow; it's a piece of cake
+            pie!
+        </section>
+        <hr>
+        <section>
+            <header>USER COMMENTS</header>
+            <ul class="UserComments">
+                <li> This is a very fun recipe to follow, because Grandma makes it sweet and simple. This pie is
+                    thickened with
+                    cornstarch and flour in addition to egg yolks, and contains no milk.
+
+                    <div>- Emilie S.</div>
+                </li>
+                <li>
+                    Q: What do you call an ape who loves pie?
+                    A: A meringue-utan.
+                    <div>- Vickie K.</div>
+
+                </li>
+                <li>
+                    This site can really engage my interest. Follow the recipe above and make it so! This pie is number
+                    one.
+                    <div>- Jean-Luc Piecard</div>
+                </li>
+            </ul>
+        </section>
+        <hr>
+        <section>
+            <header>LINKS</header>
+            <div>
+                <a href="#">Search for other lemon meringue pie recipes
+                    Home</a>
+                <a href="#"></a>
+            </div>
+
+        </section>
+        <hr>
+        <footer>
+            Copyright Â© 2012 Granny's Pies |
+            A Granny's Pies Production |
+            All rights reserved |
+        </footer>
+        <a href="../index.html">back</a>
+    </div>
 </body>
+
 </html>
