final recipe page

--- a/views/recipe.html
+++ b/views/recipe.html
@@ -18,11 +18,7 @@
             <img src="../images/recipe/pie.jpg" alt="">
         </div>
 
-        <p>One 9-inch pie <br />
-            30 Min - Prep time <br />
-            10 Min - Cook time <br />
-            40 Min - Total <br />
-            8 Servings</p>
+        <p>One 9-inch pie <br /> 30 Min - Prep time <br /> 10 Min - Cook time <br /> 40 Min - Total <br /> 8 Servings</p>
         <hr>
         <section id="ingredients">
             <header>INGREDIENTS</header>
@@ -66,33 +62,26 @@
                         <li>Spread meringue over pie, sealing the edges at the crust.
                     </ul>
                     </ul>
-                </li>
-                <li>Bake: Bake in preheated oven for 10 minutes, or until meringue is golden brown.</li>
+                    </li>
+                    <li>Bake: Bake in preheated oven for 10 minutes, or until meringue is golden brown.</li>
             </ol>
-            This is our favorite recipe here at Granny's Pies. It has been enjoyed by pie fans for many years. It's
-            Granny's
-            favorite! We hope you'll find that this recipe is delicious and also easy to follow; it's a piece of cake
-            pie!
+            This is our favorite recipe here at Granny's Pies. It has been enjoyed by pie fans for many years. It's Granny's favorite! We hope you'll find that this recipe is delicious and also easy to follow; it's a piece of cake pie!
         </section>
         <hr>
         <section>
             <header>USER COMMENTS</header>
             <ul class="UserComments">
-                <li> This is a very fun recipe to follow, because Grandma makes it sweet and simple. This pie is
-                    thickened with
-                    cornstarch and flour in addition to egg yolks, and contains no milk.
+                <li> This is a very fun recipe to follow, because Grandma makes it sweet and simple. This pie is thickened with cornstarch and flour in addition to egg yolks, and contains no milk.
 
                     <div>- Emilie S.</div>
                 </li>
                 <li>
-                    Q: What do you call an ape who loves pie?
-                    A: A meringue-utan.
+                    Q: What do you call an ape who loves pie? A: A meringue-utan.
                     <div>- Vickie K.</div>
 
                 </li>
                 <li>
-                    This site can really engage my interest. Follow the recipe above and make it so! This pie is number
-                    one.
+                    This site can really engage my interest. Follow the recipe above and make it so! This pie is number one.
                     <div>- Jean-Luc Piecard</div>
                 </li>
             </ul>
@@ -100,20 +89,19 @@
         <hr>
         <section>
             <header>LINKS</header>
+            <br>
             <div>
-                <a href="#">Search for other lemon meringue pie recipes
-                    Home</a>
-                <a href="#"></a>
+                <a href="#">Search for other lemon meringue pie recipes</a>
+            </div>
+            <div>
+                <a href="../index.html">Home</a>
             </div>
 
         </section>
         <hr>
         <footer>
-            Copyright Â© 2012 Granny's Pies |
-            A Granny's Pies Production |
-            All rights reserved |
+            Copyright © 2012 Granny's Pies | <br /> A Granny's Pies Production | <br /> All rights reserved |
         </footer>
-        <a href="../index.html">back</a>
     </div>
 </body>
 
