--- a/css/style.css
+++ b/css/style.css
@@ -1,40 +1,49 @@
-header { 
+header {
     background-color: rgb(248, 245, 245);
     color: rgb(129, 247, 19);
     font-family: Arial, Helvetica, sans-serif;
     font-weight: bold;
     padding-top: 1%;
-    }
+}
 
-    #mainHeader {
-        text-align: center;
-    }
-    
-    body {
-        border-style: solid;
-        border-color:red;
-        padding-left: 10%;
-        padding-right: 10%;
-        text-align: center;
-    }
+#mainHeader {
+    text-align: center;
+}
 
-    pre {
-        display: block;
-        font-family: monospace;
-        white-space: pre;
-        padding: 0;
-      } 
+body {
+    /*border-style: solid;
+        border-color:red;*/
+    padding-left: 10%;
+    padding-right: 10%;
+    text-align: center;
+}
 
-    #wrapper {
-        text-align: left;
-        width: 728px;
-        width: 1024px;
-        border-style: solid;
-        border-color: black;
-    }
+pre {
+    display: block;
+    font-family: monospace;
+    white-space: pre;
+    padding: 0;
+}
 
-    ul.UserComments > li {
-        background: #cce5ff;
-        margin: 5px;
-        list-style-type:none;
-      }
+#wrapper {
+    text-align: left;
+    width: 728px;
+    width: 1024px;
+    border-radius: 10px 10px 10px 10px;
+    box-shadow: 0 0 30px rgba(0, 0, 0, 0.4);
+    margin-right: auto;
+    margin-top: 10px;
+    padding: 10px;
+    /*border-style: solid;
+        border-color: black;*/
+}
+
+ul.UserComments>li {
+    background: #cce5ff;
+    margin: 5px;
+    list-style-type: none;
+}
+
+footer {
+    text-align: right;
+}
