--- a/views/recipe.html
+++ b/views/recipe.html
@@ -100,7 +100,17 @@
         </section>
         <hr>
         <footer>
-            Copyright © 2012 Granny's Pies | <br /> A Granny's Pies Production | <br /> All rights reserved |
+            <span>
+                    <a href="https://validator.w3.org/check/referer">
+                        <img src="../images/validator_logo.png" alt="validator logo">
+                    </a>
+            </span>
+            <span>
+                <a href="http://jigsaw.w3.org/css-validator/check/referer">
+                <img src=http://jigsaw.w3.org/css-validator/images/vcss alt="Valid CSS!"/>
+                </a>
+                </span>
+            <div>© 2012 Granny's Pies | <br /> A Granny's Pies Production | <br /> All rights reserved |</div>
         </footer>
     </div>
 </body>
