--- a/views/recipe.html
+++ b/views/recipe.html
@@ -20,7 +20,7 @@
 
         <p>One 9-inch pie <br /> 30 Min - Prep time <br /> 10 Min - Cook time <br /> 40 Min - Total <br /> 8 Servings</p>
         <hr>
-        <section id="ingredients">
+        <div id="ingredients">
             <header>INGREDIENTS</header>
             <ul>
                 <li>1 cup white sugar</li>
@@ -36,9 +36,9 @@
                 <li>6 tbsp white sugar</li>
             </ul>
 
-        </section>
+        </div>
         <hr>
-        <section id="directions">
+        <div id="directions">
             <header>DIRECTIONS</header>
             <ol>
                 <li>Preheat Oven: Preheat oven to 350 degrees F (175 degrees C).</li>
@@ -59,16 +59,15 @@
                     <ul>
                         <li>Whip egg whites until foamy.</li>
                         <li>Add sugar gradually, and continue to whip until stiff peaks form.</li>
-                        <li>Spread meringue over pie, sealing the edges at the crust.
+                        <li>Spread meringue over pie, sealing the edges at the crust.</li>
                     </ul>
-                    </ul>
-                    </li>
-                    <li>Bake: Bake in preheated oven for 10 minutes, or until meringue is golden brown.</li>
+                </li>
+                <li>Bake: Bake in preheated oven for 10 minutes, or until meringue is golden brown.</li>
             </ol>
             This is our favorite recipe here at Granny's Pies. It has been enjoyed by pie fans for many years. It's Granny's favorite! We hope you'll find that this recipe is delicious and also easy to follow; it's a piece of cake pie!
-        </section>
+        </div>
         <hr>
-        <section>
+        <div>
             <header>USER COMMENTS</header>
             <ul class="UserComments">
                 <li> This is a very fun recipe to follow, because Grandma makes it sweet and simple. This pie is thickened with cornstarch and flour in addition to egg yolks, and contains no milk.
@@ -85,9 +84,9 @@
                     <div>- Jean-Luc Piecard</div>
                 </li>
             </ul>
-        </section>
+        </div>
         <hr>
-        <section>
+        <div>
             <header>LINKS</header>
             <br>
             <div>
@@ -97,7 +96,7 @@
                 <a href="../index.html">Home</a>
             </div>
 
-        </section>
+        </div>
         <hr>
         <footer>
             <span>
