--- a/views/recipe.html
+++ b/views/recipe.html
@@ -10,11 +10,10 @@
 
 <body>
     <div id="wrapper">
-        <p>
-            <header id="mainHeader">Grandma's Lemon Meringue Pie</header>
-        </p>
 
-        <div>
+        <header id="mainHeader">Grandma's Lemon Meringue Pie</header>
+
+        <div class="images">
             <img src="../images/recipe/pie.jpg" alt="">
         </div>
 
