--- a/views/recipe.html
+++ b/views/recipe.html
@@ -104,7 +104,7 @@
                     </a>
             </span>
             <span>
-                <a href="http://jigsaw.w3.org/css-validator/check/referer">
+                <a href="https://jigsaw.w3.org/css-validator/check/referer">
                 <img src=http://jigsaw.w3.org/css-validator/images/vcss alt="Valid CSS!"/>
                 </a>
                 </span>
