invalid image name fix

--- a/views/recipe.html
+++ b/views/recipe.html
@@ -105,7 +105,7 @@
             </span>
             <span>
                 <a href="https://jigsaw.w3.org/css-validator/check/referer">
-                <img src="../images/validator_css.gif" alt="Valid CSS!"/>
+                <img src="../images/validate_css.gif" alt="Valid CSS!"/>
                 </a>
                 </span>
             <div>© 2012 Granny's Pies | <br /> A Granny's Pies Production | <br /> All rights reserved |</div>
