--- a/css/recipe.css
+++ b/css/recipe.css
@@ -1,14 +1,18 @@
 header {
     background-color: rgb(248, 245, 245);
-    color: rgb(129, 247, 19);
+    color: #A4A400;
     font-family: Arial, Helvetica, sans-serif;
     font-weight: bold;
     padding-top: 1%;
+    font-size: 18pt;
+    text-decoration: underline;
 }
 
 #mainHeader {
     text-align: center;
     margin-bottom: 1%;
+    font-size: 22pt;
+    text-decoration: underline;
 }
 
 body {
@@ -17,6 +21,9 @@ body {
     padding-left: 10%;
     padding-right: 10%;
     text-align: center;
+    font-size: 11pt;
+    color: #404040;
+    font-family: Georgia, 'Times New Roman', Times, serif;
 }
 
 img {
@@ -45,4 +52,13 @@ ul.UserComments>li {
 
 footer {
     text-align: right;
+}
+
+a {
+    color: #A4A400;
+}
+
+.copyWrite {
+    text-align: right;
+    font-family: monospace;
 }
