--- a/views/pie.html
+++ b/views/pie.html
@@ -5,7 +5,7 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link rel="stylesheet" href="../css/recipe.css">
-    <title>About Me</title>
+    <title>Grandma's lemon meringue pie</title>
 </head>
 
 <body>
@@ -23,16 +23,16 @@
             <header>INGREDIENTS</header>
             <ul>
                 <li>1 cup white sugar</li>
-                <li>2 tbsp all-purpose flour</li>
-                <li>3 tbsp cornstarch</li>
-                <li>1/4 tsp salt</li>
+                <li>2 <abbr title="table spoons">tbsp</abbr> all-purpose flour</li>
+                <li>3 <abbr title="table spoons">tbsp</abbr> cornstarch</li>
+                <li>1/4 <abbr title="tee spoons">tsp</abbr> salt</li>
                 <li>1 1/2 cups water</li>
                 <li>2 lemons, juiced and zested</li>
-                <li>2 tbsp butter</li>
+                <li>2 <abbr title="table spoons">tbsp</abbr> butter</li>
                 <li>4 egg yolks, beaten</li>
                 <li>1 (9 inch) pie crust, baked</li>
                 <li>4 egg whites</li>
-                <li>6 tbsp white sugar</li>
+                <li>6 <abbr title="table spoons">tbsp</abbr> white sugar</li>
             </ul>
 
         </div>
@@ -63,7 +63,7 @@
                 </li>
                 <li>Bake: Bake in preheated oven for 10 minutes, or until meringue is golden brown.</li>
             </ol>
-            This is our favorite recipe here at Granny's Pies. It has been enjoyed by pie fans for many years. It's Granny's favorite! We hope you'll find that this recipe is delicious and also easy to follow; it's a piece of cake pie!
+            This is our favorite recipe here at Granny's Pies. It has been enjoyed by pie fans for many years. It's Granny's favorite! We hope you'll find that this recipe is delicious and also easy to follow; it's a piece of <del>cake</del> pie!
         </div>
         <hr>
         <div>
@@ -108,7 +108,11 @@
                 <img src="../images/validate_css.jpg" alt="Valid CSS!"/>
                 </a>
                 </span>
-            <div>© 2012 Granny's Pies | <br /> A Granny's Pies Production | <br /> All rights reserved |</div>
+            <div class="copyWrite">
+                <pre>
+                    © 2012 Granny's Pies | <br /> A Granny's Pies Production | <br /> All rights reserved | <br>
+                </pre>
+            </div>
         </footer>
     </div>
 </body>
