--- a/views/aboutme.html
+++ b/views/aboutme.html
@@ -5,63 +5,64 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>About Me</title>
-    <link rel="stylesheet" type="text/css" href="../css/aboutme.css">
+    <link rel="stylesheet" type="text/css" href="../css/styleme.css">
 </head>
 
 <body>
-    <header>
-        <h1 class="mainHeader">About Tadiyos G. Haile</h1>
-        <br>
-        <p>My name is Tadiyos Girma I'm currently srudyig MSCS at MIU, and I'm a <strong>perfectionist</strong> </p>
-    </header>
-    <hr>
-    <section>
-        <h2>My On-Campus Classes Here At MIU</h2>
-        <ul>
-            <li>CS390: Fundamantal Programming Practices</li>
-            <li>CS401: Modern Programming Practices</li>
-            <li>CS544: Enterprise Architecture</li>
-            <li>CS472: Web Programming</li>
-            <li>CS435: Algorithms</li>
-            <li>CS572: Modern Web Application</li>
-        </ul>
+    <div id="wrapper">
+        <header>
+            <h1 class="mainHeader">About Kaleab T Ero</h1>
+            <br>
+            <p>I am Kaleab Ero and I'm <strong>uncomplicated , and stronly hate lies</strong> </p>
+        </header>
+        <hr>
+        <section>
+            <h2>I took the following courses from MIU</h2>
+            <ul>
+                <li>CS390: Fundamantal Programming Practices</li>
+                <li>CS401: Modern Programming Practices</li>
+                <li>CS435: Algorithms</li>
+                <li>CS472: Web Programming</li>
+                <li>CS544: Enterprise Architecture</li>
+                <li>CS572: Modern Web Application</li>
+            </ul>
 
-        <h2>My Favoriate Movies</h2>
-        <P class="MvDesc">(Even thouth I don't watch a lot of movies... here are some I loved)</P>
-        <ol>
-            <li>The Pursuit of Happyness<a href="https://www.imdb.com/title/tt0454921/?ref_=fn_al_tt_1">(IMDB)</a></li>
-            <li>Gravity<a href="https://www.imdb.com/title/tt1454468/?ref_=fn_al_tt_1">(IMDB)</a></li>
-            <li>A Walk to Remember<a href="https://www.imdb.com/title/tt0281358/?ref_=fn_al_tt_1">(IMDB)</a></li>
-            <li>Remember the Titans<a href="https://www.imdb.com/title/tt0210945/?ref_=fn_al_tt_1">(IMDB)</a></li>
-        </ol>
+            <h2>My Favoriate Movies</h2>
+            <P class="ItalicParagraphHeader">I love to watch movies , here are some I loved</P>
+            <ol>
+                <li>Lucy<a href="https://www.imdb.com/title/tt2872732/"> (IMDB)</a></li>
+                <li>The bourne Identity<a href="https://www.imdb.com/title/tt0258463/"> (IMDB)</a></li>
+                <li>The bourne Supremancy<a href="https://www.imdb.com/title/tt0372183/?ref_=nv_sr_srsg_0"> (IMDB)</a></li>
+                <li>Taken<a href="https://www.imdb.com/title/tt0936501/?ref_=fn_al_tt_1"> (IMDB)</a></li>
+                <li>Taken 2<a href="https://www.imdb.com/title/tt1397280/?ref_=nv_sr_srsg_0"> (IMDB)</a></li>
+            </ol>
 
-        <h2>My Moods</h2>
-        <p class="pInline">Happy:</p>
-        <img src="./images/TadiyosHappy.png" alt="Me Jumping Through the Roof" class="img1">
-        <p class="pInline">Sad:</p>
-        <img src="./images/TadiyosSad.jpg" alt="Me Sad Sad Sad" class="img2">
+            <h2>My Moods</h2>
+            <span class="pInline">Happy:</span>
+            <img src="../images/Happy-Dogs-playing.png" alt="I like how my the way my dog become happy" class="img1">
+            <span class="pInline">Sad:</span>
+            <img src="../images/sadme.jpg" alt="When I feel sad i prefer to be silent" class="img2">
 
-        <h2>Fun Facts About My Friends</h2>
-        <ul>
-            <li>Kaleb Ero: He likes to make notes of <em>10 page for 2 page lesson</em> :)</li>
-            <li>Girma T/mariam: He <em>stoped eating</em> while taking Algorithms course last block</li>
-        </ul>
-
-
-    </section>
-
-    <footer>
-        <a href="https://validator.w3.org/check/referer">
-            <img src="http://mumstudents.org/cs472/2014-09/images/w3c-html.png" alt="html validator" style="padding-top: 1rem;" />
-        </a>
-
-        <a href="https://jigsaw.w3.org/css-validator/check/referer">
-            <img src="http://mumstudents.org/cs472/2013-09/images/w3c-css.png" alt="html validator" style="padding-top: 1rem;" />
-        </a>
-
-        <a href="index.html" class="back">BACK</a>
-    </footer>
+            <h2>Fun Facts About My Colleagues</h2>
+            <ul>
+                <li>: Girma Teklemariam is kind of guy who <em>play ping pong like field tennis</em>:)</li>
+                <li>Tadiyos Girma : He is kind of guy <em>who got a third eye to see things from unexpected dimension</em></li>
+            </ul>
+        </section>
+        <footer>
+            <span>
+                    <a href="https://validator.w3.org/check/referer">
+                        <img src="../images/validator_logo.png" alt="validator logo">
+                    </a>
+            </span>
+            <span>
+                <a href="https://jigsaw.w3.org/css-validator/check/referer">
+                <img src="../images/validate_css.jpg" alt="Valid CSS!"/>
+                </a>
+                </span>
+        </footer>
 
 </body>
+</div>
 
 </html>
