--- a/views/aboutme.html
+++ b/views/aboutme.html
@@ -13,7 +13,7 @@
         <header>
             <h1 class="mainHeader">About Kaleab T Ero</h1>
             <br>
-            <p>I am Kaleab Ero and I'm <strong>uncomplicated , and stronly hate lies</strong> </p>
+            <p>I am Kaleab Ero and I'm <strong>uncomplicated , and strongly hate lies</strong> </p>
         </header>
         <hr>
         <section>
@@ -45,7 +45,7 @@
 
             <h2>Fun Facts About My Colleagues</h2>
             <ul>
-                <li>: Girma Teklemariam is kind of guy who <em>play ping pong like field tennis</em>:)</li>
+                <li>Girma Teklemariam is kind of guy who <em>play ping pong like field tennis</em>:)</li>
                 <li>Tadiyos Girma : He is kind of guy <em>who got a third eye to see things from unexpected dimension</em></li>
             </ul>
         </section>
