--- a/views/aboutme.html
+++ b/views/aboutme.html
@@ -45,7 +45,7 @@
 
             <h2>Fun Facts About My Colleagues</h2>
             <ul>
-                <li>Girma Teklemariam is kind of guy who <em>play ping pong like field tennis</em>:)</li>
+                <li>Biruk Asrat is a kind of guy <em>who stop eating meat after he see his ship dead on child hood</em>:)</li>
                 <li>Tadiyos Girma : He is kind of guy <em>who got a third eye to see things from unexpected dimension</em></li>
             </ul>
         </section>
