--- a/css/movie.css
+++ b/css/movie.css
@@ -1,3 +1,25 @@
 body {
     background-image: url(../images/movie/background.png);
+    font-size: 8pt;
+    font-family: Tahoma, sans-serif;
+}
+
+#img-banner {
+    margin-left: auto;
+    margin-right: auto;
+    width: 50%;
+}
+
+#banner {
+    background-image: url(../images/movie/bannerbg.png);
+    height: 50px;
+}
+
+.centered-header {
+    margin-left: auto;
+    margin-right: auto;
+    width: fit-content;
+    font-family: Tahoma, sans-serif;
+    font-size: 24pt;
+    text-shadow: 2px 2px #999999;
 }
