--- a/views/tmnt.html
+++ b/views/tmnt.html
@@ -10,11 +10,13 @@
 </head>
 
 <body>
-    <div>
-        <img src="../images/movie/banner.png" alt="Rancid Tomatoes" />
+    <div id="banner">
+        <div id="img-banner">
+            <img src="../images/movie/banner.png" alt="Rancid Tomatoes" />
+        </div>
     </div>
 
-    <h1>TMNT (2007)</h1>
+    <h1 class="centered-header">TMNT (2007)</h1>
 
     <div>
         <img src="../images/movie/overview.png" alt="general overview" />
