--- a/views/tmnt.html
+++ b/views/tmnt.html
@@ -29,87 +29,85 @@
                 </div>
 
                 <div id="review-text">
-                    <p>
+                    <p class="comment">
                         <img src="../images/movie/rotten.gif" alt="Rotten" />
                         <q>Ditching the cheeky, self-aware wink that helped to excuse the concept's inherent corniness, the movie attempts to look polished and 'cool,' but the been-there animation can't compete with the then-cutting-edge puppetry of the 1990 live-action movie.</q>
                     </p>
-                    <p>
+                    <p class="comment-by">
                         <img src="../images/movie/critic.gif" alt="Critic" /> Peter Debruge <br /> Variety
                     </p>
 
-                    <p>
+                    <p class="comment">
                         <img src="../images/movie/fresh.gif" alt="Fresh" />
                         <q>TMNT is a fun, action-filled adventure that will satisfy longtime fans and generate a legion of new ones.</q>
                     </p>
-                    <p>
+                    <p class="comment-by">
                         <img src="../images/movie/critic.gif" alt="Critic" /> Todd Gilchrist <br /> IGN Movies
                     </p>
 
-                    <p>
+                    <p class="comment">
                         <img src="../images/movie/rotten.gif" alt="Rotten" />
                         <q>It stinks!</q>
                     </p>
-                    <p>
+                    <p class="comment-by">
                         <img src="../images/movie/critic.gif" alt="Critic" /> Jay Sherman (unemployed)
                     </p>
 
-                    <p>
+                    <p class="comment">
                         <img src="../images/movie/rotten.gif" alt="Rotten" />
                         <q>The rubber suits are gone and they've been redone with fancy computer technology, but that hasn't stopped them from becoming dull.</q>
                     </p>
-                    <p>
+                    <p class="comment-by">
                         <img src="../images/movie/critic.gif" alt="Critic" /> Joshua Tyler <br /> CinemaBlend.com
                     </p>
 
-                    <p>
+                    <p class="comment">
                         <img src="../images/movie/rotten.gif" alt="Rotten" />
-                        <q>YOUR REVIEW HERE</q>
+                        <q>It is one of best animation movie out there. Even if it is old movie , I don't stop looking at this movie</q>
                     </p>
-                    <p>
-                        <img src="../images/movie/critic.gif" alt="Critic" /> NAME <br /> PUBLICATION
+                    <p class="comment-by">
+                        <img src="../images/movie/critic.gif" alt="Critic" /> Kaleab T <br /> Kt Press
                     </p>
 
-                    <p>
+                    <p class="comment">
                         <img src="../images/movie/rotten.gif" alt="Rotten" />
                         <q>The turtles themselves may look prettier, but are no smarter; torn irreparably from their countercultural roots, our superheroes on the half shell have been firmly co-opted by the industry their creators once sought to spoof.</q>
                     </p>
-                    <p>
+                    <p class="comment-by">
                         <img src="../images/movie/critic.gif" alt="Critic" /> Jeannette Catsoulis <br /> New York Times
                     </p>
 
-                    <p>
+                    <p class="comment">
                         <img src="../images/movie/rotten.gif" alt="Rotten" />
                         <q>Impersonally animated and arbitrarily plotted, the story appears to have been made up as the filmmakers went along.</q>
                     </p>
-                    <p>
+                    <p class="comment-by">
                         <img src="../images/movie/critic.gif" alt="Critic" /> Ed Gonzalez <br /> Slant Magazine
                     </p>
 
-                    <p>
+                    <p class="comment">
                         <img src="../images/movie/fresh.gif" alt="Fresh" />
                         <q>The striking use of image and motion allows each sequence to leave an impression. It's an accomplished restart to this franchise.</q>
                     </p>
-                    <p>
+                    <p class="comment-by">
                         <img src="../images/movie/critic.gif" alt="Critic" /> Mark Palermo <br /> Coast (Halifax, Nova Scotia)
                     </p>
 
-                    <p>
+                    <p class="comment">
                         <img src="../images/movie/rotten.gif" alt="Rotten" />
                         <q>The script feels like it was computer generated. This mechanical presentation lacks the cheesy charm of the three live action films.</q>
                     </p>
-                    <p>
+                    <p class="comment-by">
                         <img src="../images/movie/critic.gif" alt="Critic" /> Steve Rhodes <br /> Internet Reviews
                     </p>
 
-                    <p>
+                    <p class="comment">
                         <img src="../images/movie/rotten.gif" alt="Rotten" />
-                        <q>YOUR REVIEW HERE</q>
+                        <q>what a great animation movie</q>
                     </p>
-                    <p>
-                        <img src="../images/movie/critic.gif" alt="Critic" /> NAME <br /> PUBLICATION
+                    <p class="comment-by">
+                        <img src="../images/movie/critic.gif" alt="Critic" /> Kaleab Tadewos <br /> MIU Student
                     </p>
-
-                    <p>(1-10) of 88</p>
                 </div>
 
             </div>
@@ -117,7 +115,7 @@
                 <div id="general-overview-img">
                     <img src="../images/movie/overview.png" alt="general overview" />
                 </div>
-                <dl id="general-overview-text">
+                <dl>
                     <dt>STARRING</dt>
                     <dd>Patrick Stewart <br /> Mako <br /> Sarah Michelle Gellar <br /> Kevin Smith</dd>
 
@@ -161,12 +159,13 @@
 
             </div>
         </div>
+        <div id="no-of-reviews">(1-10) of 88</div>
     </div>
 
-    <!-- <div class="page-validator">
+    <div class="page-validator">
         <a href="http://validator.w3.org/check/referer"><img src="../images/validator_logo.png" alt="Valid HTML5" /></a> <br />
         <a href="http://jigsaw.w3.org/css-validator/check/referer"><img src="../images/validate_css.jpg" alt="Valid CSS" /></a>
-    </div> -->
+    </div>
 </body>
 
 </html>
