--- a/css/movie.css
+++ b/css/movie.css
@@ -13,6 +13,7 @@ body {
 #banner {
     background-image: url(../images/movie/bannerbg.png);
     height: 50px;
+    box-shadow: 0 0 30px rgba(0, 0, 0, 0.4);
 }
 
 .centered-header {
@@ -31,6 +32,7 @@ body {
     border: 4px grey solid;
     border-radius: 20px;
     overflow: hidden;
+    box-shadow: 0 0 30px rgba(0, 0, 0, 0.4);
 }
 
 #reviews {
