--- a/views/tmnt.html
+++ b/views/tmnt.html
@@ -27,88 +27,90 @@
                         33%
                     </span>
                 </div>
+                <div>
+                    <div id="review-text">
+                        <p class="comment">
+                            <img src="../images/movie/rotten.gif" alt="Rotten" />
+                            <q>Ditching the cheeky, self-aware wink that helped to excuse the concept's inherent corniness, the movie attempts to look polished and 'cool,' but the been-there animation can't compete with the then-cutting-edge puppetry of the 1990 live-action movie.</q>
+                        </p>
+                        <p class="comment-by">
+                            <img src="../images/movie/critic.gif" alt="Critic" /> Peter Debruge <br /> Variety
+                        </p>
 
-                <div id="review-text">
-                    <p class="comment">
-                        <img src="../images/movie/rotten.gif" alt="Rotten" />
-                        <q>Ditching the cheeky, self-aware wink that helped to excuse the concept's inherent corniness, the movie attempts to look polished and 'cool,' but the been-there animation can't compete with the then-cutting-edge puppetry of the 1990 live-action movie.</q>
-                    </p>
-                    <p class="comment-by">
-                        <img src="../images/movie/critic.gif" alt="Critic" /> Peter Debruge <br /> Variety
-                    </p>
+                        <p class="comment">
+                            <img src="../images/movie/fresh.gif" alt="Fresh" />
+                            <q>TMNT is a fun, action-filled adventure that will satisfy longtime fans and generate a legion of new ones.</q>
+                        </p>
+                        <p class="comment-by">
+                            <img src="../images/movie/critic.gif" alt="Critic" /> Todd Gilchrist <br /> IGN Movies
+                        </p>
 
-                    <p class="comment">
-                        <img src="../images/movie/fresh.gif" alt="Fresh" />
-                        <q>TMNT is a fun, action-filled adventure that will satisfy longtime fans and generate a legion of new ones.</q>
-                    </p>
-                    <p class="comment-by">
-                        <img src="../images/movie/critic.gif" alt="Critic" /> Todd Gilchrist <br /> IGN Movies
-                    </p>
+                        <p class="comment">
+                            <img src="../images/movie/rotten.gif" alt="Rotten" />
+                            <q>It stinks!</q>
+                        </p>
+                        <p class="comment-by">
+                            <img src="../images/movie/critic.gif" alt="Critic" /> Jay Sherman (unemployed)
+                        </p>
 
-                    <p class="comment">
-                        <img src="../images/movie/rotten.gif" alt="Rotten" />
-                        <q>It stinks!</q>
-                    </p>
-                    <p class="comment-by">
-                        <img src="../images/movie/critic.gif" alt="Critic" /> Jay Sherman (unemployed)
-                    </p>
+                        <p class="comment">
+                            <img src="../images/movie/rotten.gif" alt="Rotten" />
+                            <q>The rubber suits are gone and they've been redone with fancy computer technology, but that hasn't stopped them from becoming dull.</q>
+                        </p>
+                        <p class="comment-by">
+                            <img src="../images/movie/critic.gif" alt="Critic" /> Joshua Tyler <br /> CinemaBlend.com
+                        </p>
 
-                    <p class="comment">
-                        <img src="../images/movie/rotten.gif" alt="Rotten" />
-                        <q>The rubber suits are gone and they've been redone with fancy computer technology, but that hasn't stopped them from becoming dull.</q>
-                    </p>
-                    <p class="comment-by">
-                        <img src="../images/movie/critic.gif" alt="Critic" /> Joshua Tyler <br /> CinemaBlend.com
-                    </p>
+                        <p class="comment">
+                            <img src="../images/movie/rotten.gif" alt="Rotten" />
+                            <q>It is one of best animation movie out there. Even if it is old movie , I don't stop looking at this movie</q>
+                        </p>
+                        <p class="comment-by">
+                            <img src="../images/movie/critic.gif" alt="Critic" /> Kaleab T <br /> Kt Press
+                        </p>
 
-                    <p class="comment">
-                        <img src="../images/movie/rotten.gif" alt="Rotten" />
-                        <q>It is one of best animation movie out there. Even if it is old movie , I don't stop looking at this movie</q>
-                    </p>
-                    <p class="comment-by">
-                        <img src="../images/movie/critic.gif" alt="Critic" /> Kaleab T <br /> Kt Press
-                    </p>
+                        <p class="comment">
+                            <img src="../images/movie/rotten.gif" alt="Rotten" />
+                            <q>The turtles themselves may look prettier, but are no smarter; torn irreparably from their countercultural roots, our superheroes on the half shell have been firmly co-opted by the industry their creators once sought to spoof.</q>
+                        </p>
+                        <p class="comment-by">
+                            <img src="../images/movie/critic.gif" alt="Critic" /> Jeannette Catsoulis <br /> New York Times
+                        </p>
 
-                    <p class="comment">
-                        <img src="../images/movie/rotten.gif" alt="Rotten" />
-                        <q>The turtles themselves may look prettier, but are no smarter; torn irreparably from their countercultural roots, our superheroes on the half shell have been firmly co-opted by the industry their creators once sought to spoof.</q>
-                    </p>
-                    <p class="comment-by">
-                        <img src="../images/movie/critic.gif" alt="Critic" /> Jeannette Catsoulis <br /> New York Times
-                    </p>
+                        <p class="comment">
+                            <img src="../images/movie/rotten.gif" alt="Rotten" />
+                            <q>Impersonally animated and arbitrarily plotted, the story appears to have been made up as the filmmakers went along.</q>
+                        </p>
+                        <p class="comment-by">
+                            <img src="../images/movie/critic.gif" alt="Critic" /> Ed Gonzalez <br /> Slant Magazine
+                        </p>
 
-                    <p class="comment">
-                        <img src="../images/movie/rotten.gif" alt="Rotten" />
-                        <q>Impersonally animated and arbitrarily plotted, the story appears to have been made up as the filmmakers went along.</q>
-                    </p>
-                    <p class="comment-by">
-                        <img src="../images/movie/critic.gif" alt="Critic" /> Ed Gonzalez <br /> Slant Magazine
-                    </p>
+                        <p class="comment">
+                            <img src="../images/movie/fresh.gif" alt="Fresh" />
+                            <q>The striking use of image and motion allows each sequence to leave an impression. It's an accomplished restart to this franchise.</q>
+                        </p>
+                        <p class="comment-by">
+                            <img src="../images/movie/critic.gif" alt="Critic" /> Mark Palermo <br /> Coast (Halifax, Nova Scotia)
+                        </p>
 
-                    <p class="comment">
-                        <img src="../images/movie/fresh.gif" alt="Fresh" />
-                        <q>The striking use of image and motion allows each sequence to leave an impression. It's an accomplished restart to this franchise.</q>
-                    </p>
-                    <p class="comment-by">
-                        <img src="../images/movie/critic.gif" alt="Critic" /> Mark Palermo <br /> Coast (Halifax, Nova Scotia)
-                    </p>
+                        <p class="comment">
+                            <img src="../images/movie/rotten.gif" alt="Rotten" />
+                            <q>The script feels like it was computer generated. This mechanical presentation lacks the cheesy charm of the three live action films.</q>
+                        </p>
+                        <p class="comment-by">
+                            <img src="../images/movie/critic.gif" alt="Critic" /> Steve Rhodes <br /> Internet Reviews
+                        </p>
 
-                    <p class="comment">
-                        <img src="../images/movie/rotten.gif" alt="Rotten" />
-                        <q>The script feels like it was computer generated. This mechanical presentation lacks the cheesy charm of the three live action films.</q>
-                    </p>
-                    <p class="comment-by">
-                        <img src="../images/movie/critic.gif" alt="Critic" /> Steve Rhodes <br /> Internet Reviews
-                    </p>
-
-                    <p class="comment">
-                        <img src="../images/movie/rotten.gif" alt="Rotten" />
-                        <q>what a great animation movie</q>
-                    </p>
-                    <p class="comment-by">
-                        <img src="../images/movie/critic.gif" alt="Critic" /> Kaleab Tadewos <br /> MIU Student
-                    </p>
+                        <p class="comment">
+                            <img src="../images/movie/rotten.gif" alt="Rotten" />
+                            <q>what a great animation movie</q>
+                        </p>
+                        <p class="comment-by">
+                            <img src="../images/movie/critic.gif" alt="Critic" /> Kaleab Tadewos <br /> MIU Student
+                        </p>
+                    </div>
                 </div>
+
 
             </div>
             <div id="general-overview">
