--- a/views/tmnt.html
+++ b/views/tmnt.html
@@ -165,8 +165,8 @@
     </div>
 
     <div class="page-validator">
-        <a href="http://validator.w3.org/check/referer"><img src="../images/validator_logo.png" alt="Valid HTML5" /></a> <br />
-        <a href="http://jigsaw.w3.org/css-validator/check/referer"><img src="../images/validate_css.jpg" alt="Valid CSS" /></a>
+        <a href="https://validator.w3.org/check/referer"><img src="../images/validator_logo.png" alt="Valid HTML5" /></a> <br />
+        <a href="https://jigsaw.w3.org/css-validator/check/referer"><img src="../images/validate_css.jpg" alt="Valid CSS" /></a>
     </div>
 </body>
 
