finish form content

--- a/views/web_form_1.html
+++ b/views/web_form_1.html
@@ -19,7 +19,7 @@
 
             <div id="password-group">
                 <label for="pword">PassWord</label>
-                <input type="text" id="pword" name="password" pattern="(?=.*\d)(?=.*[a-z])(?=.*[A-Z]).{10 , }" placeholder="Your last name..">
+                <input type="text" id="pword" name="password" pattern="(?=.*\d)(?=.*[a-z])(?=.*[A-Z]).{10,}" placeholder="Your last name.." required>
             </div>
 
             <div id="customer-website-group">
