--- a/css/web_form_2.css
+++ b/css/web_form_2.css
@@ -1,20 +1,65 @@
 #menu-bar {
-    padding: 10px;
+    padding: 4px;
     margin-bottom: 20px;
     color: white;
     background-color: #29B6F6;
+    overflow: hidden;
+    font-family: sans-serif;
 }
 
 #menu-bar a {
     padding: 10px;
-    font-size: 30px;
+    font-size: 20px;
     text-decoration: none;
+    color: white;
+    opacity: 70%;
 }
 
-#menu-bar span {
+#menu-bar-left-side {
+    width: 80%;
+    float: left;
+    vertical-align: middle;
+}
+
+#sign-out {
+    background-color: white;
+    color: black;
+}
+
+#menu-bar-right-side {
+    width: 12%;
+    float: right;
+}
+
+#right-side-reset-button {
+    background-color: white;
+    border: #C5CAE9 solid 2px;
+    color: #C5CAE9;
+}
+
+#right-side-submit-button {
+    background-color: white;
+    color: orange;
+    border: orange solid 2px;
+}
+
+#right-side-add-button {
+    background-color: white;
+    border: lightblue solid 2px;
+    color: lightblue;
+}
+
+#logo-text {
     padding: 10px;
     margin-right: 20px;
     font-size: 30px;
+}
+
+.vertical-line {
+    font-size: 40px;
+    margin-left: 10px;
+    margin-right: 10px;
+    font-weight: 300;
 }
 
 input[type=text],
@@ -29,7 +74,8 @@ input[type=password] {
     font-size: 22px;
 }
 
-input[type=submit] {
+input[type=submit],
+input[type=reset] {
     background-color: #039BE5;
     color: white;
     padding: 14px 20px;
@@ -37,7 +83,7 @@ input[type=submit] {
     border: none;
     border-radius: 4px;
     cursor: pointer;
-    width: 10%;
+    width: fit-content;
 }
 
 input[type=submit]:hover {
