--- a/views/web_form_2.html
+++ b/views/web_form_2.html
@@ -23,54 +23,52 @@
             <input id="sign-out" type="submit" value="Sign Out">
         </div>
     </div>
-    <div id="left-form">
-        <form>
-            <div id="email-group">
-                <label for="email">Email Address</label>
-                <input type="text" id="email" name="email" placeholder="Your email.." required>
-                <small>We will never share your email with anyone</small>
-            </div>
+    <div id="content">
+        <p id="form-name">New Product Form</p>
+        <div id="left-form">
+            <form>
+                <div id="email-group">
+                    <label for="email">Product Number</label>
+                    <input type="text" id="email" name="email" placeholder="Your email.." required>
+                </div>
 
-            <div id="email-group">
-                <label for="email">Email Address</label>
-                <input type="text" id="email" name="email" placeholder="Your email.." required>
-                <small>We will never share your email with anyone</small>
-            </div>
+                <div id="email-group">
+                    <label for="email">Name</label>
+                    <input type="text" id="email" name="email" placeholder="Your email.." required>
+                </div>
 
-            <div id="email-group">
-                <label for="email">Email Address</label>
-                <input type="text" id="email" name="email" placeholder="Your email.." required>
-                <small>We will never share your email with anyone</small>
-            </div>
+                <div id="email-group">
+                    <label for="email">Unit Price</label>
+                    <input type="text" id="email" name="email" placeholder="Your email.." required>
+                </div>
 
-        </form>
+            </form>
+        </div>
+
+        <div id="right-form">
+            <form action="/action_page.php">
+                <div id="email-group">
+                    <label for="email">Quantity in Stock</label>
+                    <input type="text" id="email" name="email" placeholder="Your email.." required>
+                </div>
+
+                <div id="email-group">
+                    <label for="email">Select A Supplier</label>
+                    <input type="text" id="email" name="email" placeholder="Your email.." required>
+                </div>
+
+                <div id="email-group">
+                    <label for="email">Date Supplied</label>
+                    <input type="text" id="email" name="email" placeholder="Your email.." required>
+                </div>
+
+                <input id="right-side-reset-button" type="reset" value="Reset">
+                <input id="right-side-submit-button" type="submit" value="Cancel">
+                <input id="right-side-add-button" type="submit" value="Add Product">
+            </form>
+        </div>
     </div>
 
-    <div id="right-form">
-        <form action="/action_page.php">
-            <div id="email-group">
-                <label for="email">Email Address</label>
-                <input type="text" id="email" name="email" placeholder="Your email.." required>
-                <small>We will never share your email with anyone</small>
-            </div>
-
-            <div id="email-group">
-                <label for="email">Email Address</label>
-                <input type="text" id="email" name="email" placeholder="Your email.." required>
-                <small>We will never share your email with anyone</small>
-            </div>
-
-            <div id="email-group">
-                <label for="email">Email Address</label>
-                <input type="text" id="email" name="email" placeholder="Your email.." required>
-                <small>We will never share your email with anyone</small>
-            </div>
-
-            <input id="right-side-reset-button" type="reset" value="Reset">
-            <input id="right-side-submit-button" type="submit" value="Cancel">
-            <input id="right-side-add-button" type="submit" value="Add Product">
-        </form>
-    </div>
 
 </body>
 
