--- a/css/web_form_2.css
+++ b/css/web_form_2.css
@@ -71,11 +71,24 @@
 }
 
 #form-name {
-    font-size: 30px;
+    font-size: 25px;
+    font-family: sans-serif;
+    opacity: 70%;
 }
 
 input[type=text],
 input[type=password] {
+    width: 100%;
+    padding: 10px 15px;
+    margin: 8px 0;
+    display: inline-block;
+    border: 1px solid #ccc;
+    border-radius: 4px;
+    box-sizing: border-box;
+    font-size: 15px;
+}
+
+#suppliers {
     width: 100%;
     padding: 10px 15px;
     margin: 8px 0;
@@ -103,10 +116,6 @@ input[type=submit]:hover {
 }
 
 #left-form {
-    border-radius: 5px;
-    /* background-color: #f2f2f2; */
-    /* border-width: 2px; */
-    border: #FAFAFA solid 5px;
     padding: 10px;
     font-family: "Helvetica Neue", Helvetica, Arial, sans-serif;
     font-size: 15px;
@@ -125,10 +134,6 @@ input[type=submit]:hover {
 }
 
 #right-form {
-    border-radius: 5px;
-    /* background-color: #f2f2f2; */
-    /* border-width: 2px; */
-    border: #FAFAFA solid 5px;
     padding: 10px;
     font-family: "Helvetica Neue", Helvetica, Arial, sans-serif;
     font-size: 15px;
