--- a/views/web_form_1.html
+++ b/views/web_form_1.html
@@ -9,6 +9,8 @@
 </head>
 
 <body>
+    <!-- a single form divides into 4 form groups and one submit button which submit form data -->
+
     <div id="form">
         <form action="/action_page.php">
             <div id="email-group">
@@ -37,7 +39,10 @@
             <input type="submit" value="Submit">
         </form>
     </div>
-
+    <div class="page-validator">
+        <a href="https://validator.w3.org/check/referer"><img src="../images/validator_logo.png" alt="Valid HTML5" /></a> <br />
+        <a href="https://jigsaw.w3.org/css-validator/check/referer"><img src="../images/validate_css.jpg" alt="Valid CSS" /></a>
+    </div>
 </body>
 
 </html>
