--- a/css/web_form_1.css
+++ b/css/web_form_1.css
@@ -1,3 +1,28 @@
+/* Styling the form  */
+
+#form {
+    border-radius: 5px;
+    /* background-color: #f2f2f2; */
+    /* border-width: 2px; */
+    border: #FAFAFA solid 5px;
+    padding: 20px;
+    font-family: "Helvetica Neue", Helvetica, Arial, sans-serif;
+    font-size: 30px;
+    opacity: 80%;
+}
+
+#form div {
+    margin-bottom: 20px
+}
+
+#form small {
+    font-size: 15pt;
+    opacity: 60%;
+}
+
+
+/* Styling input elements of type text and password */
+
 input[type=text],
 input[type=password] {
     width: 100%;
@@ -25,30 +50,20 @@ input[type=submit]:hover {
     background-color: #45a049;
 }
 
-#form {
-    border-radius: 5px;
-    /* background-color: #f2f2f2; */
-    /* border-width: 2px; */
-    border: #FAFAFA solid 5px;
-    padding: 20px;
-    font-family: "Helvetica Neue", Helvetica, Arial, sans-serif;
-    font-size: 30px;
-    opacity: 80%;
-}
 
-#form div {
-    margin-bottom: 20px
-}
-
-#form small {
-    font-size: 15pt;
-    opacity: 60%;
-}
+/* Styling checkme checkbox near submit button */
 
 #checkme-group {
     font-size: 30px;
 }
 
-span {
-    vertical-align: middle;
+
+/* Styling page validator linke that will be used to validate the page */
+
+.page-validator {
+    position: fixed;
+    bottom: 2px;
+    right: 2px;
+    font-size: 18px;
+    opacity: 50%;
 }
