--- a/views/web_form_2.html
+++ b/views/web_form_2.html
@@ -9,6 +9,16 @@
 </head>
 
 <body>
+
+    <!-- 
+        This document have two main div elements
+        - menu-bar 
+        - content 
+            - left form
+            - right form
+        - submit buttons are found on the right side of content
+     -->
+
     <div id="menu-bar">
         <div id="menu-bar-left-side">
             <span id="logo-text">MUM Golden Dom Market : : : SRM System  </span>
@@ -76,6 +86,10 @@
         </div>
     </div>
 
+    <div class="page-validator">
+        <a href="https://validator.w3.org/check/referer"><img src="../images/validator_logo.png" alt="Valid HTML5" /></a> <br />
+        <a href="https://jigsaw.w3.org/css-validator/check/referer"><img src="../images/validate_css.jpg" alt="Valid CSS" /></a>
+    </div>
 
 </body>
 
