updating supplier values

--- a/views/web_form_2.html
+++ b/views/web_form_2.html
@@ -66,10 +66,10 @@
                     <label for="suppliers">Select A Supplier</label>
                     <div>
                         <select id="suppliers">
-                            <option value="UNESCO">Volvo</option>
-                            <option value="Maternal Health">Saab</option>
-                            <option value="Jimma Hub">Mercedes</option>
-                            <option value="Center Hub">Audi</option>
+                            <option value="UNESCO">UNESCO</option>
+                            <option value="Maternal Health">Maternal Health</option>
+                            <option value="Jimma Hub">Jimma Hub</option>
+                            <option value="Center Hub">Center Hub</option>
                           </select>
                     </div>
                 </div>
