assignment commit for W2-D5

--- a/views/scripts.html
+++ b/views/scripts.html
@@ -60,7 +60,7 @@
         <button id="sum-of-squares">Sum of Squares</button>
         <button id="print-odd">Prints Odd</button>
         <button id="multiply-reduce">Multiply Using Reduce</button>
-        <button id="sum-reduce">Multiply Using Reduce</button>
+        <button id="sum-reduce">SUM Using Reduce</button>
         <button id="second-biggest">Second Biggest</button>
         <br />
         <br />
@@ -92,7 +92,7 @@
         <p>String Array Manipulation</p>
         <input id="input-10" type="text">
         <button class="append-button" id="add-element-3">Append String Input</button>
-        <button id="get-longest">Get Longest String</button>
+        <button id="get-longest">Get Longest String Length</button>
         <br />
         <br />
         <div>
