--- a/views/web_form_2.html
+++ b/views/web_form_2.html
@@ -90,7 +90,7 @@
         <a href="https://validator.w3.org/check/referer"><img src="../images/validator_logo.png" alt="Valid HTML5" /></a> <br />
         <a href="https://jigsaw.w3.org/css-validator/check/referer"><img src="../images/validate_css.jpg" alt="Valid CSS" /></a>
     </div>
-
+    <script src="../js/web_form_2.js"></script>
 </body>
 
 </html>
