--- a/views/web_form_1.html
+++ b/views/web_form_1.html
@@ -12,7 +12,7 @@
     <!-- a single form divides into 4 form groups and one submit button which submit form data -->
 
     <div id="form">
-        <form action="/action_page.php">
+        <form>
             <div id="email-group">
                 <label for="email">Email Address</label>
                 <input type="text" id="email" name="email" placeholder="Your email.." required>
@@ -36,13 +36,14 @@
             </div>
 
 
-            <input type="submit" value="Submit">
+            <input id="btn-submit" type="submit" value="Submit">
         </form>
     </div>
     <div class="page-validator">
         <a href="https://validator.w3.org/check/referer"><img src="../images/validator_logo.png" alt="Valid HTML5" /></a> <br />
         <a href="https://jigsaw.w3.org/css-validator/check/referer"><img src="../images/validate_css.jpg" alt="Valid CSS" /></a>
     </div>
+    <script src="../js/web_form_1.js"></script>
 </body>
 
 </html>
