add validators and fix some of the issues

--- a/css/scripts.css
+++ b/css/scripts.css
@@ -12,3 +12,11 @@ input {
 .append-button {
     background-color: rgb(132, 185, 132);
 }
+
+.page-validator {
+    position: fixed;
+    bottom: 2px;
+    right: 2px;
+    font-size: 18px;
+    opacity: 50%;
+}
