--- a/views/scripts.html
+++ b/views/scripts.html
@@ -137,6 +137,11 @@
         </div>
 
     </div>
+    <div class="page-validator">
+        <a href="https://validator.w3.org/check/referer"><img src="../images/validator_logo.png" alt="Valid HTML5" /></a> <br />
+        <a href="https://jigsaw.w3.org/css-validator/check/referer"><img src="../images/validate_css.jpg" alt="Valid CSS" /></a><br />
+        <a href="https://webster.cs.washington.edu/jslint/referer"><img src="../images/jshint-small.png" alt="Valid JS" /></a>
+    </div>
     <script src="../js/week_two_scripts.js"></script>
 </body>
 
